force-app/main/default/objects/Integration_Endpoint__mdt/Integration_Endpoint__mdt.object-meta.xml
<CustomObject>
    <description>Configuracoes de endpoints de integracao externa - Named Credentials e timeouts sem hardcode</description>
    <label>Integration Endpoint</label>
    <pluralLabel>Integration Endpoints</pluralLabel>
</CustomObject>