force-app/main/default/objects/Integration_Endpoint__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se este endpoint de integracao esta ativo</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>