force-app/main/default/objects/Integration_Endpoint__mdt/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <description>Numero maximo de tentativas em caso de falha na integracao</description>
    <label>Max. Tentativas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>