force-app/main/default/objects/Integration_Endpoint__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Nome da Named Credential configurada no Salesforce para este servico</description>
    <label>Named Credential</label>
    <length>100</length>
    <type>Text</type>
</CustomField>