force-app/main/default/objects/Integration_Endpoint__mdt/fields/Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Ms__c</fullName>
    <description>Timeout em milissegundos para chamadas ao servico externo</description>
    <label>Timeout (ms)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>